# simplechatbot

./: .gitignore  README.md  pyproject.toml
src/simplechatbot/: .env.example  constants.py  main.py
src/simplechatbot/api_clients/: anthropic_api_client.py  api_client.py  api_clients_helper.py  api_key_names.py  client_anthropic.py  client_base.py  client_google.py  client_openai.py  google_api_client.py  llm_models.py  llm_roles.py  openai_api_client.py  response_models.py
