[tool.poetry]
name = "simplechatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "simplechatbot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^5.0.1"
python-dotenv = "^1.0.1"
openai = "^1.52.0"
anthropic = "^0.36.2"
google-generativeai = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
